--- a/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
+++ b/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
@@ -18,7 +18,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.9.0" />
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Muflone" Version="6.0.5" />
 	</ItemGroup>
@@ -33,7 +34,6 @@
 	<ItemGroup>
 	  <Folder Include="Factories\" />
 	  <Folder Include="Extensions\" />
-	  <Folder Include="Abstracts\" />
 	</ItemGroup>
 
 </Project>
