--- a/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
+++ b/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
@@ -15,6 +15,7 @@
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
 	  <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <PackageIcon>Logo.png</PackageIcon>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -25,6 +26,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="..\..\..\Logo.png">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+		</None>
 		<None Include="..\..\README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
