--- a/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
+++ b/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
@@ -22,7 +22,6 @@
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-		<PackageReference Include="Muflone" Version="6.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -38,6 +37,10 @@
 
 	<ItemGroup>
 	  <Folder Include="Factories\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\..\Temp\Muflone\Muflone.csproj" />
 	</ItemGroup>
 
 </Project>
