--- a/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
+++ b/src/Muflone.Transport.Azure/Muflone.Transport.Azure.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>6.0.0</Version>
+	  <Version>6.1.0</Version>
 	  <Authors>Alberto Acerbis - Alessandro Colla</Authors>
 	  <Description>Microsoft Azure Service bus support and wrappers for Muflone's CommandHandlers and EventHandlers</Description>
 	  <PackageProjectUrl>https://github.com/CQRS-Muflone/Muflone.Transport.Azure</PackageProjectUrl>
@@ -22,6 +22,7 @@
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		<PackageReference Include="Muflone" Version="6.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
